--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,13 @@ gunicorn = "*"
 flask-login = "*"
 flask-wtf = "*"
 flask-sqlalchemy = "*"
+flask-script = "==2.0.5"
+flask-migrate = "==2.7.0"
+wtforms = {extras = ["email"], version = "*"}
+flask-uploads = "*"
+flask-mail = "*"
+werkzeug = "==0.16.0"
+markupsafe = "==2.0.1"
 
 [dev-packages]
 
