--- a/Pipfile
+++ b/Pipfile
@@ -19,8 +19,10 @@ flask-uploads = "*"
 flask-mail = "*"
 werkzeug = "==0.16.0"
 markupsafe = "==2.0.1"
+bleach = "*"
 
 [dev-packages]
+autopep8 = "*"
 
 [requires]
 python_version = "3.8"
