--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ werkzeug = "==0.16.0"
 markupsafe = "==2.0.1"
 bleach = "*"
 flask-admin = "*"
+python-dotenv = "*"
 
 [dev-packages]
 autopep8 = "*"
